{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 134,
  "lineage": "20ef5f35-ad4f-dfeb-d16d-a1aa81b3d823",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09535d580fe7d0d4a",
            "arn": "arn:aws:ec2:us-east-1:596432515653:elastic-ip/eipalloc-09535d580fe7d0d4a",
            "association_id": "eipassoc-05c45e65366d62ad8",
            "domain": "vpc",
            "id": "eipalloc-09535d580fe7d0d4a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d9338e4776a1817a",
            "private_dns": "ip-10-0-1-158.ec2.internal",
            "private_ip": "10.0.1.158",
            "public_dns": "ec2-52-2-71-88.compute-1.amazonaws.com",
            "public_ip": "52.2.71.88",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e8eddf87c53fcf5",
            "arn": "arn:aws:ec2:us-east-1:596432515653:elastic-ip/eipalloc-00e8eddf87c53fcf5",
            "association_id": "eipassoc-0195059bc85d7e5ca",
            "domain": "vpc",
            "id": "eipalloc-00e8eddf87c53fcf5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08704650c7ea3f738",
            "private_dns": "ip-10-0-2-7.ec2.internal",
            "private_ip": "10.0.2.7",
            "public_dns": "ec2-3-229-51-11.compute-1.amazonaws.com",
            "public_ip": "3.229.51.11",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:596432515653:instance/i-02e5c7ee6b93268b7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e5c7ee6b93268b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "assessment-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02bbac537d1e2eeb4"
              }
            ],
            "primary_network_interface_id": "eni-02bbac537d1e2eeb4",
            "private_dns": "ip-10-0-1-249.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.249",
            "public_dns": "ec2-3-231-26-59.compute-1.amazonaws.com",
            "public_ip": "3.231.26.59",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ca9140862f83be0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f6e76bf1ddc203a",
            "tags": {
              "Name": "BastionHost"
            },
            "tags_all": {
              "Name": "BastionHost"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-010bf9dc39622bcd8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596432515653",
            "id": "i-02e5c7ee6b93268b7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:596432515653:instance/i-09e5fe728645c4f64",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e5fe728645c4f64",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "assessment-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f6c1575ca6c4c7dc"
              }
            ],
            "primary_network_interface_id": "eni-0f6c1575ca6c4c7dc",
            "private_dns": "ip-10-0-3-203.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.203",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-017671e362b6d2db2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005991eb03b94aecc",
            "tags": {
              "Name": "Private-Web-Server"
            },
            "tags_all": {
              "Name": "Private-Web-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b5b5f1367bfe0930"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596432515653",
            "id": "i-09e5fe728645c4f64",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596432515653:internet-gateway/igw-0158cd6733f56b74a",
            "id": "igw-0158cd6733f56b74a",
            "owner_id": "596432515653",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-igw"
            },
            "tags_all": {
              "Name": "techcorp-igw"
            },
            "vpc_id": "vpc-07add2260af28d318"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09535d580fe7d0d4a",
            "association_id": "eipassoc-05c45e65366d62ad8",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0f3d20c307cb2d75f",
            "network_interface_id": "eni-0d9338e4776a1817a",
            "private_ip": "10.0.1.158",
            "public_ip": "52.2.71.88",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08f6e76bf1ddc203a",
            "vpc_id": "vpc-07add2260af28d318"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e8eddf87c53fcf5",
            "association_id": "eipassoc-0195059bc85d7e5ca",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-03537a985c0fe189f",
            "network_interface_id": "eni-08704650c7ea3f738",
            "private_ip": "10.0.2.7",
            "public_ip": "3.229.51.11",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-074dd49d47879cb71",
            "vpc_id": "vpc-07add2260af28d318"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_2",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02eb62d6be7acbdb11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f3d20c307cb2d75f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-02eb62d6be7acbdb1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596432515653",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-02eb62d6be7acbdb1"
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private_rt_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-032c67e0f251630f71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03537a985c0fe189f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-032c67e0f251630f7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596432515653",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-032c67e0f251630f7"
          },
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_2",
            "aws_route_table.private_rt_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0158cd6733f56b74a",
            "id": "r-rtb-082f7c8f6740276b01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-082f7c8f6740276b0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596432515653",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-082f7c8f6740276b0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596432515653:route-table/rtb-02eb62d6be7acbdb1",
            "id": "rtb-02eb62d6be7acbdb1",
            "owner_id": "596432515653",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f3d20c307cb2d75f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-1"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07add2260af28d318"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596432515653",
            "id": "rtb-02eb62d6be7acbdb1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596432515653:route-table/rtb-032c67e0f251630f7",
            "id": "rtb-032c67e0f251630f7",
            "owner_id": "596432515653",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03537a985c0fe189f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-2"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07add2260af28d318"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596432515653",
            "id": "rtb-032c67e0f251630f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596432515653:route-table/rtb-082f7c8f6740276b0",
            "id": "rtb-082f7c8f6740276b0",
            "owner_id": "596432515653",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0158cd6733f56b74a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-public-rt"
            },
            "tags_all": {
              "Name": "techcorp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07add2260af28d318"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596432515653",
            "id": "rtb-082f7c8f6740276b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cc947a9f6c5e025",
            "region": "us-east-1",
            "route_table_id": "rtb-02eb62d6be7acbdb1",
            "subnet_id": "subnet-005991eb03b94aecc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt_1",
            "aws_subnet.private_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa8eac6b7e806d04",
            "region": "us-east-1",
            "route_table_id": "rtb-032c67e0f251630f7",
            "subnet_id": "subnet-0f66e2b4427c4056c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt_2",
            "aws_subnet.private_subnet_2",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf743780bc7ad0a9",
            "region": "us-east-1",
            "route_table_id": "rtb-082f7c8f6740276b0",
            "subnet_id": "subnet-08f6e76bf1ddc203a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9d70ea40b9e820",
            "region": "us-east-1",
            "route_table_id": "rtb-082f7c8f6740276b0",
            "subnet_id": "subnet-074dd49d47879cb71"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596432515653:security-group/sg-010bf9dc39622bcd8",
            "description": "Allow SSH access from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010bf9dc39622bcd8",
            "ingress": [
              {
                "cidr_blocks": [
                  "197.211.59.187/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "596432515653",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07add2260af28d318"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596432515653",
            "id": "sg-010bf9dc39622bcd8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596432515653:security-group/sg-0b5b5f1367bfe0930",
            "description": "Allow web traffic and SSH from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5b5f1367bfe0930",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-010bf9dc39622bcd8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "596432515653",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07add2260af28d318"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596432515653",
            "id": "sg-0b5b5f1367bfe0930",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596432515653:subnet/subnet-005991eb03b94aecc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005991eb03b94aecc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596432515653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-private-subnet-1"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-1"
            },
            "vpc_id": "vpc-07add2260af28d318"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596432515653",
            "id": "subnet-005991eb03b94aecc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596432515653:subnet/subnet-0f66e2b4427c4056c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f66e2b4427c4056c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596432515653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-private-subnet-2"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-2"
            },
            "vpc_id": "vpc-07add2260af28d318"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596432515653",
            "id": "subnet-0f66e2b4427c4056c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596432515653:subnet/subnet-08f6e76bf1ddc203a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f6e76bf1ddc203a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "596432515653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-public-subnet-1"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-1"
            },
            "vpc_id": "vpc-07add2260af28d318"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596432515653",
            "id": "subnet-08f6e76bf1ddc203a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596432515653:subnet/subnet-074dd49d47879cb71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074dd49d47879cb71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "596432515653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-public-subnet-2"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-2"
            },
            "vpc_id": "vpc-07add2260af28d318"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596432515653",
            "id": "subnet-074dd49d47879cb71",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "techcorp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596432515653:vpc/vpc-07add2260af28d318",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad59e047c6dc8c4d",
            "default_route_table_id": "rtb-04bd0b560f7907099",
            "default_security_group_id": "sg-00317d929be71a3be",
            "dhcp_options_id": "dopt-0b23a4be18670db8e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07add2260af28d318",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04bd0b560f7907099",
            "owner_id": "596432515653",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-vpc"
            },
            "tags_all": {
              "Name": "techcorp-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596432515653",
            "id": "vpc-07add2260af28d318",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}